--- a/second.html
+++ b/second.html
@@ -17,15 +17,10 @@
 </head>
 
 <body>
-    <div class="logo">
-        <img src="assets/logo.png" alt="TK - Logo">
-        <h1>Hi, I'm Tobi!</h1>
-    </div>
-    <div class="header">
-        <a id="no-deco-link" href="second.html">
-            Click here!
-        </a>
-    </div>
+    <p>Hallo, dies ist eine Test Seite</p>
+    <a href="index.html">
+        Return
+    </a>
 </body>
 
 </html>
