Design and game-preview

--- a/index.html
+++ b/index.html
@@ -14,17 +14,44 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <!---->
+
 </head>
 
 <body>
     <div class="logo">
         <img src="assets/logo.png" alt="TK - Logo">
-        <h1>Hi, I'm Tobi!</h1>
+        <p>Tobias Knauf</p>
     </div>
-    <div class="header">
-        <a id="no-deco-link" href="second.html">
-            Click here!
-        </a>
+    <div class="socials">
+        <a id="no-deco-link" href="https://pixum.itch.io/">Itch.io</a>
+        <span>|</span>
+        <a id="no-deco-link" href="https://twitter.com/TobiasKnauf_">Twitter</a>
+        <span>|</span>
+        <a id="no-deco-link" href="https://www.youtube.com/@TobiasKnauf">Youtube</a>
+    </div>
+    <div class="intro">
+    </div>
+
+    <div class="game-collection">
+        <div class="game-preview">
+            <div class="game-image">
+                <a href="second.html">
+                    <img src="assets/dreamyDruidThumb.png">
+                </a>
+            </div>
+            <div class="game-info">
+                <div class="game-title">
+                    <h3>Dreamy Druid</h3>
+                </div>
+                <div class="game-description">
+                    <p>Escape the nightmare while shapeshifting through your dream</p>
+                </div>
+                <div class="game-tag">
+                    <h4>Platformer</h4>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
