--- a/second.html
+++ b/second.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-    <p>Hallo, dies ist eine Test Seite</p>
-    <a href="index.html">
+    <p>Hier gibts nichts zu sehen</p>
+    <a id="no-deco-link" href="index.html">
         Return
     </a>
 </body>
