--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 </head>
 
 <body>
-    <div class="logo">
-        <img src="assets/logo.png" alt="TK - Logo">
-        <p>Tobias Knauf</p>
+    <div class="nav-bar">
+        <img class="logo" src="assets/logo.png">
+        <div class="socials">
+            <a id="no-deco-link" href="https://pixum.itch.io/">Itch.io</a>
+            <span>|</span>
+            <a id="no-deco-link" href="https://twitter.com/TobiasKnauf_">Twitter</a>
+            <span>|</span>
+            <a id="no-deco-link" href="https://www.youtube.com/@TobiasKnauf">Youtube</a>
+        </div>
     </div>
-    <div class="socials">
-        <a id="no-deco-link" href="https://pixum.itch.io/">Itch.io</a>
-        <span>|</span>
-        <a id="no-deco-link" href="https://twitter.com/TobiasKnauf_">Twitter</a>
-        <span>|</span>
-        <a id="no-deco-link" href="https://www.youtube.com/@TobiasKnauf">Youtube</a>
-    </div>
+    
     <div class="intro">
     </div>
 
