--- a/index.html
+++ b/index.html
@@ -11,8 +11,23 @@
 </head>
 
 <body>
-    <div class="header">
-        <h1>Hi, I'm Tobi!</h1>
+    <div class="intro">
+        <div class="name">
+            Tobias Knauf
+        </div>
+        <div class="description">
+            <a>Programming</a>
+            |
+            <a>Game Development</a>
+            |
+            <a>UI Design</a>
+        </div>
+    </div>
+    <div class="project-image-slider">
+        <img src="Assets/Amaterasu.png">
+        <img src="Assets/Susanoo1.png">
+        <img src="Assets/Susanoo2.png">
+        <img src="Assets/Susanoo3.png">
     </div>
 </body>
 
