--- a/index.html
+++ b/index.html
@@ -7,27 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Tobias Knauf">
     <meta name="description" content="Tobias Knauf Portfolio">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link type="text/css" href="style.css" rel="stylesheet">
+
+    <link
+        href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <div class="intro">
-        <div class="name">
-            Tobias Knauf
-        </div>
-        <div class="description">
-            <a>Programming</a>
-            |
-            <a>Game Development</a>
-            |
-            <a>UI Design</a>
+    <div class="header">
+        <div class="navigation-bar">
+            <a href="index.html">Home</a>
+            <a href="index.html">About</a>
+            <a href="index.html">Projects</a>
+            <a href="index.html">Connect</a>
         </div>
     </div>
-    <div class="project-image-slider">
-        <img src="Assets/Amaterasu.png">
-        <img src="Assets/Susanoo1.png">
-        <img src="Assets/Susanoo2.png">
-        <img src="Assets/Susanoo3.png">
+    <div class="intro">
+        <p>Hey, I am</p>
+        <h1>TOBIAS KNAUF</h1>
+        <p>Programming & Game Development</p>
     </div>
 </body>
 
