Image gallery slider

--- a/index.html
+++ b/index.html
@@ -26,8 +26,20 @@
     <div class="intro">
         <p>Hey, I am</p>
         <h1>TOBIAS KNAUF</h1>
-        <p>Programming & Game Development</p>
+        <p>Programming &amp Game Development</p>
     </div>
+    <div class="scroller" data-direction="left" style="--animation-duration: 40s">
+        <div class="scroller-inner">
+            <img src="Assets/alley.jpg">
+            <img src="Assets/cityNight.jpg">
+            <img src="Assets/cornershop.jpg">
+            <img src="Assets/shop.jpg">
+            <img src="Assets/stairs.jpg">
+            <img src="Assets/street.jpg">
+        </div>
+    </div>
+
+    <script type="text/javascript" src="main.js"></script>
 </body>
 
 </html>
