--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     </div>
     <div class="scroller" data-direction="left" style="--animation-duration: 40s">
         <div class="scroller-inner">
-            <img src="Assets/alley.jpg">
-            <img src="Assets/cityNight.jpg">
-            <img src="Assets/cornershop.jpg">
-            <img src="Assets/shop.jpg">
-            <img src="Assets/stairs.jpg">
-            <img src="Assets/street.jpg">
+            <img src="assets/alley.jpg" alt="alley">
+            <img src="assets/cityNight.jpg" alt="cityNight">
+            <img src="assets/cornershop.jpg" alt="cornershop">
+            <img src="assets/shop.jpg" alt="shop">
+            <img src="assets/stairs.jpg" alt="stairs">
+            <img src="assets/street.jpg" alt="street">
         </div>
     </div>
 
