--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="description" content="Tobias Knauf Portfolio">
     <link type="text/css" href="style.css" rel="stylesheet">
 
+    <script defer type="text/javascript" src="main.js"></script>
+    <script defer src="https://kit.fontawesome.com/48ef88c9d0.js" crossorigin="anonymous"></script>
+
     <link
         href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
@@ -16,6 +19,10 @@
 
 <body>
     <div class="header">
+        <button id="theme-switch">
+            <i id="theme-icon" class="fa-solid fa-sun"></i>
+        </button>
+
         <div class="navigation-bar">
             <a href="index.html">Home</a>
             <a href="index.html">About</a>
@@ -39,7 +46,6 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="main.js"></script>
 </body>
 
 </html>
