Fancy Theme toggle

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <title>Tobias Knauf - Pixum</title>
@@ -14,18 +14,16 @@
 </head>
 
 <body>
-    <div class="header">
-        <button id="theme-switch">
-            <i id="theme-icon" class="fa-solid fa-sun"></i>
-        </button>
-
+    <header>
         <div class="navigation-bar">
             <a href="index.html">Home</a>
             <a href="index.html">About</a>
             <a href="index.html">Projects</a>
             <a href="index.html">Connect</a>
         </div>
-    </div>
+        <button id="theme-switch">
+        </button>
+    </header>
     <div class="intro">
         <p>Hey, I am</p>
         <h1>TOBIAS KNAUF</h1>
