Grain + font outline

--- a/index.html
+++ b/index.html
@@ -16,18 +16,26 @@
 <body>
     <header>
         <div class="navigation-bar">
-            <a href="index.html">Home</a>
-            <a href="index.html">About</a>
-            <a href="index.html">Projects</a>
-            <a href="index.html">Connect</a>
+            <div class="links">
+                <a href="index.html">Home</a>
+                <a href="index.html">About</a>
+                <a href="index.html">Projects</a>
+                <a href="index.html">Connect</a>
+            </div>
+            <div class="socials">
+                <a href="https://pixum.itch.io"><i class="fa-brands fa-itch-io"></i></a>
+                <a href="https://pixum.itch.io"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://pixum.itch.io"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://pixum.itch.io"><i class="fa-brands fa-discord"></i></a>
+            </div>
         </div>
-        <button id="theme-switch">
-        </button>
+        <button id="theme-switch"></button>
+
     </header>
 
     <div class="intro">
         <h1>TOBIAS KNAUF</h1>
-        <p>Programming &amp Game Development</p>
+        <p class="outline-font">Programming &amp Game Development</p>
     </div>
     <div class="scroller" data-direction="left" style="--animation-duration: 40s">
         <div class="scroller-inner">
