New projects style

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link type="text/css" href="style.css" rel="stylesheet">
 
     <script defer type="text/javascript" src="main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script defer src="https://kit.fontawesome.com/48ef88c9d0.js" crossorigin="anonymous"></script>
 </head>
 
@@ -37,16 +38,41 @@
         <h1>TOBIAS KNAUF</h1>
         <p class="outline-font">Programming &amp Game Development</p>
     </div>
-    <div class="scroller" data-direction="left" style="--animation-duration: 40s">
-        <div class="scroller-inner">
-            <img src="assets/alley.jpg" alt="alley">
-            <img src="assets/cityNight.jpg" alt="cityNight">
-            <img src="assets/cornershop.jpg" alt="cornershop">
-            <img src="assets/shop.jpg" alt="shop">
-            <img src="assets/stairs.jpg" alt="stairs">
-            <img src="assets/street.jpg" alt="street">
+
+    <div class="projects">
+        <div class="project-bar">
+            <div class="project-entry"><h2>Dreamy Druid</h2></div>
+            <div class="project-entry"><h2>Dreamy Druid</h2></div>
+            <div class="project-entry"><h2>Dreamy Druid</h2></div>
+            <div class="project-entry"><h2>Dreamy Druid</h2></div>
+        </div>
+        <div class="project-view">
+            <h1>Dreamy Druid</h1>
+            <img src="assets/dreamyDruidThumb.png">
+            <p>Description</p>
+            <div class="tags">
+                <span>HTML</span>
+                <span>CSS</span>
+                <span>JS</span>
+            </div>
         </div>
     </div>
+
+
+    <!-- <div class="about">
+        <h1>WHO AM I?</h1>
+        <p>Full stack developer with a passion for creating fun and challenging video games, with additional skills in
+            web and software development.</p>
+        <p>I have a strong foundation of both front- and back-end development, allowing me to create immersive
+            experiences across multiple platforms.</p>
+        <p>My expertise is in the development of video games. I have created video games since 2016 which since allowed
+            me to showcase a portfolio of different genres
+            highlighting my experience in this industry.
+        </p>
+        <p>Proficient in C/C++, C#, HTML, CSS, Javascript and more.</p>
+    </div> -->
+
+
 </body>
 
 </html>
