--- a/index.html
+++ b/index.html
@@ -41,19 +41,53 @@
 
     <div class="projects">
         <div class="project-bar">
-            <div class="project-entry"><h2>Dreamy Druid</h2></div>
-            <div class="project-entry"><h2>Dreamy Druid</h2></div>
-            <div class="project-entry"><h2>Dreamy Druid</h2></div>
-            <div class="project-entry"><h2>Dreamy Druid</h2></div>
+            <div class="project-entry">
+                <h2>Dreamy Druid</h2>
+            </div>
+            <div class="project-entry">
+                <h2>Dreamy Druid</h2>
+            </div>
+            <div class="project-entry">
+                <h2>Dreamy Druid</h2>
+            </div>
+            <div class="project-entry">
+                <h2>Dreamy Druid</h2>
+            </div>
         </div>
+
         <div class="project-view">
-            <h1>Dreamy Druid</h1>
-            <img src="assets/dreamyDruidThumb.png">
-            <p>Description</p>
-            <div class="tags">
-                <span>HTML</span>
-                <span>CSS</span>
-                <span>JS</span>
+            <div class="about-projects">
+                <h1>PROJECTS</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi incidunt voluptas eveniet eligendi
+                    sint dolore ad tenetur, dicta labore quasi officia, quisquam doloremque ipsum. Quam veritatis
+                    deserunt quasi deleniti labore!
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur repellat, sequi quidem eum
+                    eligendi ipsam ea laudantium! Eveniet eaque veritatis ipsa fugit modi laborum, ea placeat. Cumque
+                    voluptatum quis facere.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. A autem incidunt saepe repellendus eos
+                    architecto consequatur consectetur. Quasi nostrum sequi exercitationem. Nesciunt consectetur
+                    veritatis perspiciatis eligendi exercitationem, tempore sed distinctio!
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, expedita. Ratione, facere molestiae
+                    velit nihil earum dolor quibusdam reiciendis provident, amet ut molestias facilis vel? Voluptatem
+                    ducimus maxime dolor laborum?
+                </p>
+            </div>
+            <div class="project-info">
+                <div class="title-bar">
+                    <h1>[Dreamy Druid]</h1>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+                <img class="project-thumb" src="assets/dreamyDruidThumb.png">
+                <div class="description-bar">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto aut quas voluptatem tempora cupiditate maxime doloribus, iure eius amet? In voluptate quaerat, cum temporibus harum dolorem ex rerum. Eligendi, eius.</p>
+                    <div class="tags">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>JS</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
